interest section margin on mobile fixed

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -85,7 +85,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;  
-        margin-top: 90vh;
+        margin-top: 60vh;
         max-width: 80vh;
         
     }
@@ -188,7 +188,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 110vh; 
+        margin-top: 130vh; 
      
     }
 
